# haihe-water-platform

./: .gitignore  GITHUB_PAGES_DEPLOY.md  README.md
.github/workflows/: deploy-pages.yml
backend/: .env.example  app.py  import_coordinates.py  import_data.py  import_railway_seed.py  init_new_database.py  migrate_mysql_to_sqlite.py  pymysql.py  pyproject.toml  requirements.txt  start_neo4j.py
backend/routes/: chat.py  dashboard.py  graph.py
backend/utils/: dashboard_screen.py  sandbox_data.py  token_helper.py
docs/: 404.html
docs/config/: site.config.js
docs/pages/: boxplot-analysis.html  chat.html  correlation-analysis.html  dashboard.html  forgot-password.html  index.html  knowledge-graph.html  login.html  profile.html  province-comparison.html  register.html  sandbox.html  trend-analysis.html
docs/services/: chatService.js
docs/utils/: chatUtils.js
frontend/: REACT_MIGRATION.md  index.html  package-lock.json  package.json  vite.config.js
frontend/components/: ChatMessage.js
frontend/config/: api.config.js  runtime-config.js  theme.config.js
frontend/layouts/: layout.js
frontend/pages/: boxplot-analysis.html  chat.html  correlation-analysis.html  dashboard.html  forgot-password.html  index.html  knowledge-graph.html  profile.html  province-comparison.html  register.html  sandbox.html  trend-analysis.html
frontend/scripts/: copy-legacy-assets.mjs  generate-react-page-components.mjs  generate-react-page-markup.mjs
frontend/services/: chatService.js
haihe-water-platform/: start_server.bat
scripts/: build-github-pages.ps1
(+77 files in other folders)
